--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -1,24 +1,34 @@
-@ARTICLE{CDLOD,
-    AUTHOR="Filip Strugar",
-    TITLE="Continuous Distance-Dependent Level of Detail for 
-Rendering Heightmaps",
-    YEAR="2010",
+@article{CDLOD,
+author = { Filip   Strugar },
+title = {Continuous Distance-Dependent Level of Detail for Rendering Heightmaps},
+journal = {Journal of Graphics, GPU, and Game Tools},
+volume = {14},
+number = {4},
+pages = {57-74},
+year  = {2009},
+publisher = {Taylor & Francis},
+doi = {10.1080/2151237X.2009.10129287},
+URL = { 
+        https://doi.org/10.1080/2151237X.2009.10129287
+},
+eprint = { 
+        https://doi.org/10.1080/2151237X.2009.10129287
 }
+}
+
 @ARTICLE{RMTCLDC,
     AUTHOR="Thatcher Ulrich",
     TITLE="Rendering Massive Terrains using Chunked Level of Detail Control",
     YEAR="2002",
 }
 @ARTICLE{GPU,
-    AUTHOR="Arul Asirvatham",
-    AUTHOR="Hugues Hoppe",
+    AUTHOR="Arul Asirvatham, Hugues Hoppe",
     TITLE="Terrain Rendering Using GPU-Based Geometry Clipmaps",
     HOWPUBLISHED = "\url{http://hhoppe.com/gpugcm.pdf}",
     NOTE = "Accédé en Janvier 2018"
 }
 @ARTICLE{nav,
-    AUTHOR="MICHAEL LEE",
-    AUTHOR="HANAN SAMET",
+    AUTHOR="MICHAEL LEE, HANAN SAMET",
     TITLE="Navigating through Triangle Meshes Implemented as Linear Quadtrees",
     YEAR="2000",
 }
