--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -16,19 +16,82 @@ eprint = {
 }
 }
 
-@ARTICLE{RMTCLDC,
-    AUTHOR="Thatcher Ulrich",
-    TITLE="Rendering Massive Terrains using Chunked Level of Detail Control",
-    YEAR="2002",
+@article{NTTMIALQ,
+ author = {Lee, Michael and Samet, Hanan},
+ title = {Navigating Through Triangle Meshes Implemented As Linear Quadtrees},
+ journal = {ACM Trans. Graph.},
+ issue_date = {April 2000},
+ volume = {19},
+ number = {2},
+ month = apr,
+ year = {2000},
+ issn = {0730-0301},
+ pages = {79--121},
+ numpages = {43},
+ url = {http://doi.acm.org/10.1145/343593.343598},
+ doi = {10.1145/343593.343598},
+ acmid = {343598},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data structures, finite element analysis, hierarchical methods, neighbor finding, ray tracing, spherical modeling, triangle meshes},
 }
-@ARTICLE{GPU,
-    AUTHOR="Arul Asirvatham, Hugues Hoppe",
-    TITLE="Terrain Rendering Using GPU-Based Geometry Clipmaps",
-    HOWPUBLISHED = "\url{http://hhoppe.com/gpugcm.pdf}",
-    NOTE = "Accédé en Janvier 2018"
+
+@article{PathFinding,
+  title={Using quad tree as data storage for a terrain representation and a core for a path finding algorithm},
+  author={Waresiak, Bartosz and Skrzy{\'n}ski, P},
+  journal={Automatyka/Akademia G{\'o}rniczo-Hutnicza im. Stanis{\l}awa Staszica w Krakowie},
+  volume={15},
+  pages={681--691},
+  year={2011}
 }
-@ARTICLE{nav,
-    AUTHOR="MICHAEL LEE, HANAN SAMET",
-    TITLE="Navigating through Triangle Meshes Implemented as Linear Quadtrees",
-    YEAR="2000",
+
+@misc{PlanetRenderer,
+	HOWPUBLISHED = "\url{http://robert-lindner.com/blog/category/project/planet-renderer/}",
+	AUTHOR = "Robert, Lindner",
+	TITLE = "Planet Renderer",
+	YEAR = "2016",
+	NOTE = "Accédé en Janvier 2018"
 }
+
+@misc{Heightmaps,
+	HOWPUBLISHED = "\url{http://chrisbrough.com/project/2012/04/Quadtree-Level-of-Detail-for-Heightmaps/}",
+	AUTHOR = "Chris, Brough",
+	TITLE = "Quadtree Level of Detail for Heightmaps",
+	YEAR = "2012",
+	NOTE = "Accédé en Janvier 2018"
+}
+
+@misc{libnoise,
+	HOWPUBLISHED = "\url{http://libnoise.sourceforge.net/examples/complexplanet/index.html}",
+	AUTHOR = "Jason Bevins",
+	TITLE = "libnoise Example: Complex planetary surface",
+	NOTE = "Accédé en Janvier 2018"
+}
+
+@inproceedings{MassiveTerrain,
+  title={Rendering massive terrains using chunked level of detail control},
+  author={Ulrich, Thatcher},
+  booktitle={Proc. ACM SIGGRAPH 2002},
+  year={2002}
+}
+
+@article{HHope,
+  title={Terrain rendering using GPU-based geometry clipmaps},
+  author={Asirvatham, Arul and Hoppe, Hugues},
+  journal={GPU gems},
+  volume={2},
+  number={2},
+  pages={27--46},
+  year={2005},
+  publisher={Citeseer}
+}
+
+@inproceedings{Spherical,
+  title={Rendering and managing spherical data with sphere quadtrees},
+  author={Fekete, Gy{\"o}rgy},
+  booktitle={Proceedings of the 1st Conference on Visualization'90},
+  pages={176--186},
+  year={1990},
+  organization={IEEE Computer Society Press}
+}
+
