BF: Génération de terrain

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -187,7 +187,19 @@ D'autre projets similaires existent mais utilisent des structures de données di
 %---------------------------%
 
 \section{Besoins fonctionnels}
-\subsection{Interface}
+
+\subsection{Génération de terrain}
+
+Générer la carte de hauteur d'un terrain.\\
+Construire une sphère à partir de la carte rectangulaire afin d'obtenir
+une planète.
+
+
+\subsection{Interface graphique}
+
+
+
+\subsection{Interface graphique}
 
 Générer une carte de hauteur décrivant le terrain de la planète, et l'utiliser pour former le maillage d'une sphère et l'afficher à l'écran. L'utilisateur doit pouvoir déplacer la caméra en trois dimensions dans la scène à l'aide du clavier et/ou de la souris.
 
@@ -195,7 +207,7 @@ Générer une carte de hauteur décrivant le terrain de la planète, et l'utilis
 
 Implémenter une structure de donnée représentant un quad-tree à utiliser avec les algorithmes de CDLOD (voir figure \ref{fig:quadtree})
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[scale=0.5]{img/Quadtree.png}
   \caption{Quad-tree}
   \label{fig:quadtree}
