--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -95,6 +95,17 @@ Boris \textsc{Mansencal}
 \addcontentsline{toc}{chapter}{Introduction}
 \setcounter{chapter}{1}
 
+L'objectif de ce projet est de générer le terrain \ref{fig:terrain}
+d'une planète procéduralement et de l'afficher à l'écran.
+
+\begin{figure}[!h]
+  \includegraphics[scale=0.5]{img/terrain.png}
+  \caption{Terrain procédural\protect\footnotemark}
+  \label{fig:terrain}
+\end{figure}
+%Parce que latex
+\footnotetext{Source: https://youtu.be/AT7h8pYJRiw}
+
 Un objet en trois dimensions complexe est un ensemble de sommets reliés
 entre eux par des arrêtes, formant des faces triangulaires. L'ensemble
 de ces points et arrêtes est appelé maillage. Ces triangles sont ensuite
@@ -111,19 +122,19 @@ exemple un terrain. Une partie du terrain est proche de l'observateur,
 nous voulons donc en afficher les détails, mais une autre partie est
 plus éloignée, et les détails seront moins visibles sur l'image finale.
 On peut donc réduire le nombre de triangle de la partie éloignée afin de
-réduire le nombre de triangles à traiter.
+réduire le nombre de triangles à traiter. Pour simplifier le stockage
+des données du terrain, on peut représenter les points du maillage
+uniquement par leur hauteur par rapport au rayon de la sphère. Un
+tableau représentant la hauteur d'un ensemble de points reliés est
+appelé carte de hauteur ou \emph{heightmap}.
 
 L'objectif de ce projet est d'implémenter un système de \emph{LOD} (
 \emph{Level of Detail}: niveau de détail) à appliquer sur le maillage
-d'une sphère en vue d'une application en temps réel, afin d'optimiser
-son affichage. Ce système sera fournis en temps que bibliothèque de
-fonctions.
-Le projet comportera aussi une application permettant le rendu de cette
-sphère en trois dimensions, afin de pouvoir visualiser le fonctionnement
-du système de \emph{LOD}, ainsi qu'un moyen de mesurer les performances
-du système. Comme demandé, notre projet se basera sur la méthode
-proposée dans \cite{CDLOD}, permettant de générer le maillage en temps
-réel en fonction de la distance à la caméra. 
+d'une sphère en vue d'une application en temps intéractif, afin
+d'optimiser son affichage. Le projet comportera une application
+permettant le rendu de cette sphère en trois dimensions, afin de pouvoir
+visualiser le fonctionnement du système de \emph{LOD}, ainsi qu'un moyen
+de mesurer les performances du système.
 
 %-----------------------------------------------------------------%
 %   État de l’existant
@@ -256,7 +267,7 @@ quart de la zone du parent au niveau de détail supérieur.\\
 
 \begin{figure}[!h]
   \includegraphics[scale=0.5]{img/Quadtree.png}
-  \caption{Quadtree \cite{CDLOD}}
+  \caption{quadtree \cite{cdlod}}
   \label{fig:quadtree}
 \end{figure}
 
@@ -289,16 +300,6 @@ du programme.\\
 %---------------------------%
 
 \section{Besoins non fonctionnels}
-
-\subsection{Intégration continue}
-
-Mettre en place un système d'intégration continue en parallèle au projet
-afin d'exécuter les tests.\\
-
-\subsection{Gestionnaire de versions}
-
-Utiliser un outil de gestion de version afin de disposer d'un dépôt
-partagé et de suivre l'évolution du projet.\\
 
 \subsection{Documentations}
 
